--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Live Talk - Girls Video Call</string>
+    <string name="app_name">Live Talk </string>
 
 
   <!--  Admob test ads/>-->
